add handler to sync changes after offline mode (#14)

добавил полноценный offilne mode
в офлайне теперь можно:
-- создавать траты
-- создавать тудушки
-- отмечать тудушки
изменения будут синхронизироваться при появлении инета
